[build-system]
requires = ["uv_build>=0.11.28,<0.12", "uv-dynamic-versioning"]
build-backend = "uv_build"

[project]
name = "JSLT"
version = "2.0.2"
description = "JSON transformation/templating engine"
authors = [
  { name="Daniel Rexin", email="daniel@medinion.de" },
]
readme = "README.md"
requires-python = ">=3.12.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
keywords = ["json", "engine", "templating", "transformation", "jslt"]
license = { file = "LICENSE"}
dependencies = [
    "jmespath>=1.1.0",
    "simpleeval>=1.0.7",
]

[project.urls]
Homepage = "https://github.com/danniedarko/jslt"
Issues = "https://github.com/danniedarko/jslt/issues"
