[build-system]
requires = ["uv_build>=0.11.28,<0.12", "uv-dynamic-versioning"]
build-backend = "uv_build"

[project]
name = "JSLT"
version = "2.1.0"
description = "JSON transformation/templating engine"
authors = [
  { name="Daniel Rexin", email="daniel@medinion.de" },
]
readme = "README.md"
requires-python = ">=3.12.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["json", "engine", "templating", "transformation", "jslt"]
license = { file = "LICENSE"}
dependencies = [
    "jmespath>=1.1.0",
    "simpleeval>=1.0.7",
]

[project.urls]
Homepage = "https://github.com/danniedarko/jslt"
Issues = "https://github.com/danniedarko/jslt/issues"
Repository = "https://github.com/danniedarko/jslt"

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]

[tool.ruff]

[tool.ruff.lint]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults

[tool.isort]
profile = "black"
line_length = 88